# base_project_gtest_gmock

./: .gitmodules  CMakeLists.txt  README.md
modules/cred_storage/: CMakeLists.txt
modules/cred_storage/src/: cred_storage.c
modules/cred_storage/test/: cred_storage_test.cpp  fs_mock.cpp  fs_mock.hpp
